	    - Current move hightlighting, board and diagram colors follow css style definition
	    - Cursor key navigation works in IE
	    - Cursor left key navigation works the same way backwards as right works its way forwards, i.e. skipping variations
	    - Dotted move numbers for black moves in a main line are also applied following a diagram and a variation.
	* Annotation
	    - Added engine thinking time to annotator string
	    - Stop engine at end of annotation
	    - UCI engine: Added notion of length of mating line to cp score (shorter is better)
	    - Added annotation at end of variations
	    - Added depth to variation scores
	    - Added option to score all moves (also those which are not annotated)
	    - Removed option to annotate only not-best-moves, as it is no longer usefull now
	      all-moves does no longer produce lines starting with the played move
	    - Increased maximum engine thinking time to 999 [sec]
	    - Removed the blunder signature in the annotation (as we cannot tell how sharp the threshold is)
- New features:
	* Correspondence Chess:
		- Allow observation of games on ICCF webchess
		- Add connector file support to configure game relay from the internet
		- Make dialogues etc. theme aware for Tk 8.5
		- Allow for postal games by the Mode "Postal" header. Those
		  games are not touched but show up in the cc window provided a
		  suitable PGN is present in the Inbox. (ICCF might generate this
		  in case of mixed events.)
		- Add two new headers: WhiteAddress / BlackAddress to hold
		  postal adresses for eventual postcard printing
		- Read additional header tags from the database and thus allow
		  to show e.g. flags if Black/WhiteCountry header is set even if
		  those tags are not provided by the games in the Inbox
		- Rewrite of some parts of the update procedure
		- Code cleanup and performance improvements
	* Update board in comment editor with current position while the comment editor is left open. (Joost t' Haart)